--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,12 @@
     "extends": ["stylelint-config-standard"],
     "rules": {
         "comment-empty-line-before": null,
-        "media-feature-range-notation": "prefix"
+        "media-feature-range-notation": "prefix",
+        "property-no-unknown": [
+            true,
+            {
+                "ignoreProperties": ["interpolate-size"]
+            }
+        ]
     }
 }
