--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
     "url": "https://github.com/substrate-system/css-normalize/issues"
   },
   "homepage": "https://github.com/substrate-system/css-normalize",
-  "license": "MIT"
+  "license": "SEE LICENSE IN LICENSE"
 }
